test/expected/explain_ari.out
explain int& r[2]
             ^
14: error: array of reference is illegal; did you mean (&r)[]?
